Added Section Testimonial Slider

--- a/sections/Testimonial-Slider.liquid
+++ b/sections/Testimonial-Slider.liquid
@@ -1,10 +1,12 @@
 <!-- htlm -->
 
 <!-- schema -->
-{% schema %} { "name": "Testimonial Slider", "settings": [ {
-"id":"testimonial-slider", "type": "text", "label": "Add a testimonial slider" }
-], "templates": ["index"], "presets": [{ "name": "Testimonial Slider",
-"category": "Sliders", }]} {% endschema %}
+{% schema %}
+{
+"name": "Testimonial Slider",
+"settings": [ { "id":"testimonial-slider", "type": "text", "label": "Add a testimonial slider" }],
+"templates": ["index"], "presets": [{ "name": "Testimonial Slider", "category": "Sliders" }] }
+{% endschema %}
 
 <!-- stylesheet -->
 {% stylesheet %} {% endstylesheet %}
